[gd_scene load_steps=22 format=3 uid="uid://xnut1lyv1bsr"]

[ext_resource type="Script" path="res://assets/scripts/VBoxContainer2.gd" id="1_lpo4d"]
[ext_resource type="FontFile" uid="uid://dj4wghlpfdosm" path="res://assets/fonts/font.ttf" id="2_1ffsj"]
[ext_resource type="Texture2D" uid="uid://c615iesgeb6gv" path="res://assets/textures/pixil-frame-0-74.png" id="5_5gghi"]
[ext_resource type="Texture2D" uid="uid://j6ae5merpgpi" path="res://assets/textures/pixil-frame-0-73.png" id="6_tw8i6"]
[ext_resource type="Texture2D" uid="uid://po1h457li5su" path="res://assets/textures/pixil-frame-0-72.png" id="7_nbftv"]
[ext_resource type="Texture2D" uid="uid://dba5wcsgbf5lb" path="res://assets/textures/pixil-frame-0-71.png" id="8_uhc8f"]
[ext_resource type="Texture2D" uid="uid://dtnp4kvvemaqx" path="res://assets/textures/pixil-frame-0-70.png" id="9_ogkfj"]
[ext_resource type="PackedScene" uid="uid://bsxdwyb4at4ok" path="res://assets/prefabs/tile_map.tscn" id="10_00y27"]
[ext_resource type="Texture2D" uid="uid://p5n7b10yn1r7" path="res://assets/textures/pixil-frame-0-69.png" id="10_bekdn"]
[ext_resource type="AudioStream" uid="uid://di8a84snu2sbs" path="res://assets/audio/music/hot_air_menu.wav" id="11_8e4eu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66fd8"]
bg_color = Color(0.0627451, 0.505882, 0.756863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.223529, 0.960784, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivcga"]
bg_color = Color(0.14902, 0.635294, 0.92549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.223529, 0.960784, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 0.01

[sub_resource type="Theme" id="Theme_0lx1j"]
Button/colors/font_color = Color(0.14902, 0.635294, 0.92549, 1)
Button/colors/font_focus_color = Color(0.0611949, 0.507711, 0.755072, 1)
Button/colors/font_hover_color = Color(0.0611949, 0.507711, 0.755072, 1)
Button/colors/font_hover_pressed_color = Color(0.0627451, 0.505882, 0.756863, 1)
Button/colors/font_outline_color = Color(0, 0, 1, 1)
Button/colors/font_pressed_color = Color(0.0611949, 0.507711, 0.755072, 1)
Button/constants/outline_size = 4
Button/fonts/font = ExtResource("2_1ffsj")
Button/styles/focus = SubResource("StyleBoxFlat_66fd8")
Button/styles/hover = SubResource("StyleBoxFlat_66fd8")
Button/styles/normal = SubResource("StyleBoxFlat_ivcga")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xqld"]
bg_color = Color(0.0627451, 0.505882, 0.756863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.223529, 0.960784, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imjtn"]
bg_color = Color(0.14902, 0.635294, 0.92549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.223529, 0.960784, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjfo5"]
bg_color = Color(0.14902, 0.635294, 0.92549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id="Theme_slvho"]
Button/colors/font_color = Color(0, 0.227451, 1, 1)
Button/styles/focus = SubResource("StyleBoxFlat_7xqld")
Button/styles/hover = SubResource("StyleBoxFlat_7xqld")
Button/styles/normal = SubResource("StyleBoxFlat_imjtn")
Panel/styles/panel = SubResource("StyleBoxFlat_wjfo5")

[sub_resource type="Theme" id="Theme_ilmwm"]
Button/colors/font_color = Color(0, 0.227451, 1, 1)
Button/styles/focus = SubResource("StyleBoxFlat_7xqld")
Button/styles/hover = SubResource("StyleBoxFlat_7xqld")
Button/styles/normal = SubResource("StyleBoxFlat_imjtn")

[sub_resource type="LabelSettings" id="LabelSettings_8q6p3"]
font = ExtResource("2_1ffsj")
font_color = Color(0.14902, 0.635294, 0.92549, 1)
outline_size = 4
outline_color = Color(0, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uiwo4"]
font = ExtResource("2_1ffsj")
font_color = Color(0.14902, 0.635294, 0.92549, 1)
outline_size = 4
outline_color = Color(0, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l7444"]
font = ExtResource("2_1ffsj")
font_size = 128
font_color = Color(0.14902, 0.635294, 0.92549, 1)
outline_size = 4
outline_color = Color(0, 0, 1, 1)
shadow_color = Color(0, 0, 0, 0.129412)
shadow_offset = Vector2(-300, 465)

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_lpo4d")

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -86.0
offset_right = 150.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Button3")
theme = SubResource("Theme_0lx1j")
text = "Play"

[node name="Button3" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Button2")
theme = SubResource("Theme_0lx1j")
text = "Settings"

[node name="Button2" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 36.0
offset_right = 150.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Button3")
theme = SubResource("Theme_0lx1j")
text = "Quit"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_slvho")

[node name="HSlider" type="HSlider" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_right = 140.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../HSlider2")
focus_neighbor_bottom = NodePath("../Button4")
theme = SubResource("Theme_ilmwm")
value = 100.0

[node name="Label" type="Label" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -21.0
offset_right = 54.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_8q6p3")

[node name="Button4" type="Button" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 35.0
offset_right = 150.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = SubResource("Theme_0lx1j")
text = "Done"

[node name="Panel2" type="Panel" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -86.0
offset_right = 150.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_slvho")

[node name="HSlider2" type="HSlider" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -61.0
offset_right = 140.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../HSlider")
theme = SubResource("Theme_ilmwm")
value = 100.0

[node name="Label2" type="Label" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -82.0
offset_right = 54.5
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_uiwo4")

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer3"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -461.5
offset_top = 48.0
offset_right = 461.5
offset_bottom = 203.0
grow_horizontal = 2
text = "Full of Hot Air"
label_settings = SubResource("LabelSettings_l7444")

[node name="Pixil-frame-0-74" type="Sprite2D" parent="."]
position = Vector2(215, 227)
texture = ExtResource("5_5gghi")

[node name="Pixil-frame-0-73" type="Sprite2D" parent="."]
position = Vector2(784, 53)
texture = ExtResource("6_tw8i6")

[node name="Pixil-frame-0-72" type="Sprite2D" parent="."]
position = Vector2(1140, 319)
texture = ExtResource("7_nbftv")

[node name="Pixil-frame-0-71" type="Sprite2D" parent="."]
position = Vector2(359, 311)
texture = ExtResource("8_uhc8f")

[node name="Pixil-frame-0-70" type="Sprite2D" parent="."]
position = Vector2(538, 93)
texture = ExtResource("9_ogkfj")

[node name="Pixil-frame-0-69" type="Sprite2D" parent="."]
position = Vector2(857, 297)
texture = ExtResource("10_bekdn")

[node name="Pixil-frame-0-75" type="Sprite2D" parent="."]
position = Vector2(1154, 124)
texture = ExtResource("5_5gghi")

[node name="Pixil-frame-0-76" type="Sprite2D" parent="."]
position = Vector2(0, 209)
texture = ExtResource("10_bekdn")

[node name="Pixil-frame-0-77" type="Sprite2D" parent="."]
position = Vector2(159, 82)
texture = ExtResource("9_ogkfj")

[node name="Pixil-frame-0-78" type="Sprite2D" parent="."]
position = Vector2(888, 427)
texture = ExtResource("7_nbftv")

[node name="Pixil-frame-0-79" type="Sprite2D" parent="."]
position = Vector2(187, 421)
texture = ExtResource("9_ogkfj")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_8e4eu")
autoplay = true
bus = &"Music"

[node name="TileMap" parent="." instance=ExtResource("10_00y27")]
layer_0/tile_data = PackedInt32Array(589829, 131075, 65539, 589830, 131075, 4, 589831, 131075, 4, 589832, 131075, 4, 589833, 131075, 3, 589834, 196611, 3, 589839, 3, 2, 589840, 3, 2, 589841, 3, 2, 589838, 3, 2, 589837, 262147, 3, 589836, 262147, 4, 589835, 262147, 4, 589828, 196611, 65539, 589827, 262147, 65539, 589826, 3, 2, 589825, 3, 2, 589824, 3, 2, 655360, 3, 3, 655361, 3, 3, 655362, 3, 3, 655363, 262147, 65538, 655364, 327683, 4, 655365, 327683, 4, 655366, 327683, 4, 655367, 327683, 4, 655368, 327683, 4, 655369, 327683, 4, 655370, 327683, 4, 655371, 327683, 4, 655372, 327683, 4, 655373, 262147, 2, 655374, 3, 3, 655375, 3, 3, 655376, 3, 3, 655377, 3, 3, 262146, 196611, 1, 131080, 3, 1, 524303, 65539, 4, 0, 3, 2, 65536, 3, 4, 131072, 3, 2, 196608, 3, 2, 262144, 3, 2, 327680, 3, 2, 393216, 3, 2, 458752, 3, 2, 524288, 3, 2, 1, 3, 2, 65537, 3, 2, 131073, 3, 2, 196609, 131075, 0, 262145, 131075, 1, 327681, 3, 2, 393217, 3, 2, 458753, 3, 2, 524289, 3, 2, 2, 3, 2, 65538, 3, 2, 131074, 3, 2, 196610, 196611, 0, 327682, 3, 2, 393218, 3, 0, 458754, 3, 1, 524290, 3, 2, 3, 3, 2, 65539, 196611, 2, 131075, 3, 2, 196611, 262147, 0, 262147, 262147, 1, 327683, 3, 2, 393219, 65539, 0, 458755, 65539, 1, 524291, 3, 2, 4, 3, 2, 65540, 3, 2, 131076, 3, 2, 196612, 3, 2, 262148, 3, 2, 327684, 65539, 4, 393220, 3, 2, 458756, 3, 2, 524292, 3, 2, 5, 3, 2, 65541, 3, 2, 131077, 3, 2, 196613, 3, 2, 262149, 3, 2, 327685, 196611, 2, 393221, 3, 2, 458757, 3, 2, 524293, 3, 2, 6, 3, 2, 65542, 3, 2, 131078, 3, 2, 196614, 196611, 2, 262150, 3, 2, 327686, 3, 2, 393222, 3, 2, 458758, 3, 2, 524294, 3, 2, 7, 3, 2, 65543, 3, 2, 131079, 3, 2, 196615, 3, 2, 262151, 3, 2, 327687, 3, 2, 393223, 3, 2, 458759, 3, 2, 524295, 3, 2, 8, 3, 2, 65544, 3, 0, 196616, 3, 2, 262152, 3, 2, 327688, 3, 2, 393224, 3, 2, 458760, 3, 2, 524296, 3, 2, 9, 3, 2, 65545, 65539, 0, 131081, 65539, 1, 196617, 3, 2, 262153, 3, 2, 327689, 3, 2, 393225, 3, 2, 458761, 3, 2, 524297, 3, 2, 10, 3, 2, 65546, 3, 2, 131082, 3, 4, 196618, 3, 2, 262154, 3, 2, 327690, 3, 2, 393226, 3, 2, 458762, 3, 2, 524298, 3, 2, 11, 3, 2, 65547, 3, 2, 131083, 3, 2, 196619, 3, 2, 262155, 3, 2, 327691, 3, 2, 393227, 3, 2, 458763, 3, 2, 524299, 3, 2, 12, 3, 2, 65548, 196611, 2, 131084, 3, 2, 196620, 3, 2, 262156, 3, 2, 327692, 196611, 2, 393228, 3, 2, 458764, 3, 2, 524300, 3, 2, 13, 3, 2, 65549, 65539, 2, 131085, 3, 2, 196621, 3, 2, 262157, 131075, 0, 327693, 131075, 1, 393229, 3, 2, 458765, 3, 2, 524301, 3, 2, 14, 3, 2, 65550, 131075, 2, 131086, 3, 2, 196622, 3, 2, 262158, 196611, 0, 327694, 196611, 1, 393230, 3, 2, 458766, 3, 2, 524302, 3, 2, 15, 3, 2, 65551, 3, 2, 131087, 3, 2, 196623, 3, 2, 262159, 262147, 0, 327695, 262147, 1, 393231, 3, 2, 458767, 3, 2, 16, 3, 2, 65552, 3, 2, 131088, 3, 2, 196624, 3, 2, 262160, 3, 2, 327696, 3, 2, 393232, 3, 2, 458768, 3, 2, 524304, 3, 2, 17, 3, 2, 458769, 196611, 2, 524305, 3, 2, 65553, 3, 2, 131089, 3, 2, 196625, 3, 2, 262161, 3, 2, 327697, 3, 2, 393233, 3, 2)

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="CanvasLayer" method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="CanvasLayer" method="_on_button_2_pressed"]
[connection signal="value_changed" from="CanvasLayer2/HSlider" to="CanvasLayer" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer2/Button4" to="CanvasLayer" method="_on_button_4_pressed"]
[connection signal="value_changed" from="CanvasLayer2/HSlider2" to="CanvasLayer" method="_on_h_slider_2_value_changed"]
[connection signal="finished" from="AudioStreamPlayer" to="CanvasLayer" method="_on_audio_stream_player_finished"]
